--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "mongodb": "^4.2.2"
   }
 }
